--- a/index.html
+++ b/index.html
@@ -1,76 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-	
-		<title>TAYLOR</title>
-		
+		<meta charset = "utf-8">
+		<title>XDXXRDX</title>
 	</head>
+	
 	<body>
 	<center>
-	<h1>Taylor Swift</h1>
+	<h1>XDXXRDX</H1>
 	</center>
-	<center>
-	<img src="https://th.bing.com/th/id/OIP.RCoo89nb-cYdJjNeesorVgHaLH?pid=ImgDet&rs=1" width=250
-			alt="Taylor Swift" />
-	</center>		
-	<section>
-	<article>
-		
-		<h2>Relação de álbuns lançados.</h2>
-		<ol>
-		<li>Taylor Swift</li>
-		<li>Fearless</li>
-		<li>Speak Now</li>
-		<li>Red</li>
-		<li>1989</li>
-		<li>reputation</li>
-		<li>Lover</li>
-		<li>folklore</li>
-		<li>evermore</li>
-		<li>Midnights</li>
-		</ol>
-	</article>
-	</section>
-	
-	<table border="2">
-	<h2>Possui Regravação?</h2>
-		<tr>
-			<th>Taylor Swift</th>
-			<th>Fearless</th>
-			<th>Speak Now</th>
-			<th>Red</th>
-			<th>1989</th>
-			<th>reputation</th>
-			<th>Lover</th>
-			<th>folklore</th>
-			<th>evermore</th>
-			<th>Midnights</th>
-			
-		</tr>
-		<tr>
-			<td>Não possui</td>
-			<td>Possui</td>
-			<td>Não possui</td>
-			<td>Possui</td>
-			<td>Não possui</td>
-			<td>Não possui</td>
-			<td>Possui direito das masters</td>
-			<td>Possui direito das masters</td>
-			<td>Possui direito das masters</td>
-			<td>Possui direito das masters</td>
-
-
-			
-		
-	</table>
-	<center>
-	<h1>Clipe de Blank Space</h1>
-	<video src="https://www.youtube.com/watch?v=e-ORhEE9VVg" controls></video>
-	
-	<h1>Audio de This is What You Came For</h1>
-	<audio src="C:\Users\eduar\iCloudDrive\Taylor Swift - This Is What You Came For (2).mp3" controls> </audio>
-	</center>
-		
 	</body>
 </html>
