--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
 	<center>
 	<h1>XDXXRDX</H1>
 	</center>
+	
+	<center>
+	<fieldset>
+	
+	<input type = button value ="Descubra." onclick= "segredo()">
+	</fieldset>
+	
+	<script>
+	function segredo() {
+		alert("XDXXRDX significa EDUARDO")
+	}
+	</script>
+	</center>
 	</body>
 </html>
