--- a/index.html
+++ b/index.html
@@ -3,24 +3,40 @@
 	<head>
 		<meta charset = "utf-8">
 		<title>XDXXRDX</title>
+		<style>
+			body {
+				background-color: black;
+				color: white;
+			}
+			button {
+				background-color: yellow;
+				color: black;
+				padding: 10px 20px;
+				border: none;
+				border-radius: 5px; 
+				cursor: pointer;
+			}
+		</style>
 	</head>
 	
 	<body>
 	<center>
-	<h1>XDXXRDX</H1>
+	<h1>XDXXRDX</h1>
 	</center>
 	
 	<center>
-	<fieldset>
-	
-	<input type = button value ="Descubra." onclick= "segredo()">
-	</fieldset>
 	
 	<script>
 	function segredo() {
 		alert("XDXXRDX significa EDUARDO")
 	}
 	</script>
+	
+		<button onclick="segredo()">DESCUBRA</button></br></br>
+		
+	<a href="https://www.instagram.com/xdxxrdx">INSTAGRAM</a></br>
+	
+	
 	</center>
 	</body>
 </html>
