--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div id="tela-inicial">
-        <h1>Digite a Senha</h1>
+        <h1>DIGITE A SENHA:</h1>
         <input type="password" id="senha" placeholder="Insira a senha">
         <button onclick="verificarSenha()">Entrar</button>
     </div>
