--- a/index.html
+++ b/index.html
@@ -23,17 +23,24 @@
         #input-senha {
             margin-top: 20px; /* Espaçamento entre a instrução e o campo */
         }
+
+        #mensagem-amor {
+            font-size: 16px; /* Tamanho da fonte da declaração */
+            line-height: 1.5; /* Espaçamento entre linhas */
+            margin-top: 20px; /* Espaçamento após a mensagem de boas-vindas */
+        }
     </style>
 </head>
 <body>
     <div id="tela-inicial">
-        <h1>DIGITE A SENHA:</h1>
+        <h1>Digite a Senha</h1>
         <input type="password" id="senha" placeholder="Insira a senha">
         <button onclick="verificarSenha()">Entrar</button>
     </div>
 
     <div id="tela-mensagem">
-        <p id="mensagem"></p>
+        <p id="mensagem-boas-vindas">Meu amor,</p>
+        <p id="mensagem-amor"></p>
     </div>
 
     <script>
@@ -44,14 +51,24 @@
             if (senhaDigitada === senhaCorreta) {
                 document.getElementById('tela-inicial').style.display = 'none';
                 document.getElementById('tela-mensagem').style.display = 'block';
-                document.getElementById('mensagem').textContent = 'Eu te amo!';
+                document.getElementById('mensagem-amor').textContent = `
+                    QUE FELICIDADE PODER TE TER COMO MEU NAMORADO, VOCÊ É UMA DAS PESSOAS MAIS DOCES QUE EU TIVE O PRAZER DE CONHECER, E QUE DELÍCIA É ME LAMBUZAR NA SUA DOÇURA! HAHAHA. 
+                    NUNCA NINGUÉM TINHA ME FEITO AMAR DE UMA FORMA TÃO CALMA, É UM AMOR TOTALMENTE NOVO, SE EU PUDESSE COMPARAR COM UMA PAISAGEM, NOSSO AMOR SERIA UM PARQUE, NÃO COMO AQUELES PARQUES DE DIVERSÕES CAINDO AOS PEDAÇOS DE FERRUGEM, MAS COMO AQUELES COM GRAMA E UM LAGO NUM FIM DE TARDE, TUDO MUITO LINDO, TUDO MUITO CHEIROSO. 
+                    “Por ser exato
+                    O amor não cabe em si
+                    Por ser encantado
+                    O amor revela-se
+                    Por ser amor
+                    Invade
+                    E fim.” 
+                    NÃO SEI SE AINDA SOBROU DECLARAÇÕES OU FORMAS DE EXPRESSAR MEU AMORR QUE EU JÁ NÃO TENHA FEITO, MODESTIA A PARTE HEHEH
+                    MAS É ISSO, EU PODERIA FICAR AQUI FALANDO MIL VEZES O QUANTO TE AMO, MAS GOSTO DE PENSAR QUE VOCÊ SABE, AINDA ASSIM... TE AMO GATINHO!
+                    OBRIGADO POR SER PAZ, OBRIGADO POR SER LUZ, OBRIGADO POR SER MEU NAMORADO.
+                `;
             } else {
-                document.getElementById('mensagem').textContent = 'Senha inválida';
+                document.getElementById('mensagem-amor').textContent = 'Senha inválida';
             }
         }
     </script>
 </body>
 </html>
-
-<!-- Fontes: -->
-<!-- 1. https://hcode.com.br/blog/instalando-sql-server-e-conectando-com-php -->
