--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div id="tela-inicial">
-        <h1>Digite a Senha</h1>
+        <h1>6 meses é meio ano!</h1>
         <input type="password" id="senha" placeholder="Insira a senha">
         <button onclick="verificarSenha()">Entrar</button>
     </div>
@@ -46,7 +46,7 @@
     <script>
         function verificarSenha() {
             const senhaDigitada = document.getElementById('senha').value;
-            const senhaCorreta = '10032024';
+            const senhaCorreta = '18062024';
 
             if (senhaDigitada === senhaCorreta) {
                 document.getElementById('tela-inicial').style.display = 'none';
