Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -52,18 +52,13 @@
                 document.getElementById('tela-inicial').style.display = 'none';
                 document.getElementById('tela-mensagem').style.display = 'block';
                 document.getElementById('mensagem-amor').textContent = `
-                    QUE FELICIDADE PODER TE TER COMO MEU NAMORADO, VOCÊ É UMA DAS PESSOAS MAIS DOCES QUE EU TIVE O PRAZER DE CONHECER, E QUE DELÍCIA É ME LAMBUZAR NA SUA DOÇURA! HAHAHA. 
-                    NUNCA NINGUÉM TINHA ME FEITO AMAR DE UMA FORMA TÃO CALMA, É UM AMOR TOTALMENTE NOVO, SE EU PUDESSE COMPARAR COM UMA PAISAGEM, NOSSO AMOR SERIA UM PARQUE, NÃO COMO AQUELES PARQUES DE DIVERSÕES CAINDO AOS PEDAÇOS DE FERRUGEM, MAS COMO AQUELES COM GRAMA E UM LAGO NUM FIM DE TARDE, TUDO MUITO LINDO, TUDO MUITO CHEIROSO. 
-                    “Por ser exato
-                    O amor não cabe em si
-                    Por ser encantado
-                    O amor revela-se
-                    Por ser amor
-                    Invade
-                    E fim.” 
-                    NÃO SEI SE AINDA SOBROU DECLARAÇÕES OU FORMAS DE EXPRESSAR MEU AMORR QUE EU JÁ NÃO TENHA FEITO, MODESTIA A PARTE HEHEH
-                    MAS É ISSO, EU PODERIA FICAR AQUI FALANDO MIL VEZES O QUANTO TE AMO, MAS GOSTO DE PENSAR QUE VOCÊ SABE, AINDA ASSIM... TE AMO GATINHO!
-                    OBRIGADO POR SER PAZ, OBRIGADO POR SER LUZ, OBRIGADO POR SER MEU NAMORADO.
+<p>Há 6 meses você me faz entender o que a Taylor estava sentindo quando escreveu “Eles acham que o amor é para mostrar, mas eu morreria por você em segredo.</p>
+<p>Quem sou eu quando não tem ninguém olhando? Eu sou apaixonado por você, com ou sem plateia, porque eu sinto que nosso amor é sobre nós, e é uma paz enorme poder dizer isso.</p>
+<p>Gabriel, eu espero que eu consiga ajudar a alegrar seus dias tanto quanto você ajuda a alegrar os meus. Eu te admiro tanto enquanto ser namorado e amigo. Que sorte minha poder ter essas duas versões. Um companheiro pra vida!</p>
+<p>Lembro no começo, quando estávamos entendendo como íamos nos encaixar na vida um do outro, como eu me preocupava, até mesmo com a forma que eu te chamava, pra mim, se eu não te chamasse de babu eu não estaria sendo íntimo kkkkkk, mas é engraçado pensar como o tempo dissolveu essas preocupações, Gabriel, babu, meu bem, B, mo, independente do nome, a certeza que eu tenho é do que eu sinto, e isso não muda :))</p>
+<p>Obrigado de novo, por estar fazendo parte desse momento tão feliz da minha vida, você é especial demais pra mim, meu Gabrielzinho, meu babuzinho, meu gatinho!</p>
+<p>Espero que possamos comemorar muitos mais meses e anos pela frente!</p>
+<p>Mal posso esperar pra saber o que o futuro nos reserva <3</p>
                 `;
             } else {
                 document.getElementById('mensagem-amor').textContent = 'Senha inválida';
