Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 document.getElementById('tela-inicial').style.display = 'none';
                 document.getElementById('tela-mensagem').style.display = 'block';
                 document.getElementById('mensagem-amor').textContent = `
-<p>Há 6 meses você me faz entender o que a Taylor estava sentindo quando escreveu “Eles acham que o amor é para mostrar, mas eu morreria por você em segredo.</p>
-<p>Quem sou eu quando não tem ninguém olhando? Eu sou apaixonado por você, com ou sem plateia, porque eu sinto que nosso amor é sobre nós, e é uma paz enorme poder dizer isso.</p>
-<p>Gabriel, eu espero que eu consiga ajudar a alegrar seus dias tanto quanto você ajuda a alegrar os meus. Eu te admiro tanto enquanto ser namorado e amigo. Que sorte minha poder ter essas duas versões. Um companheiro pra vida!</p>
-<p>Lembro no começo, quando estávamos entendendo como íamos nos encaixar na vida um do outro, como eu me preocupava, até mesmo com a forma que eu te chamava, pra mim, se eu não te chamasse de babu eu não estaria sendo íntimo kkkkkk, mas é engraçado pensar como o tempo dissolveu essas preocupações, Gabriel, babu, meu bem, B, mo, independente do nome, a certeza que eu tenho é do que eu sinto, e isso não muda :))</p>
-<p>Obrigado de novo, por estar fazendo parte desse momento tão feliz da minha vida, você é especial demais pra mim, meu Gabrielzinho, meu babuzinho, meu gatinho!</p>
-<p>Espero que possamos comemorar muitos mais meses e anos pela frente!</p>
-<p>Mal posso esperar pra saber o que o futuro nos reserva <3</p>
+Há 6 meses você me faz entender o que a Taylor estava sentindo quando escreveu “Eles acham que o amor é para mostrar, mas eu morreria por você em segredo.</p>
+Quem sou eu quando não tem ninguém olhando? Eu sou apaixonado por você, com ou sem plateia, porque eu sinto que nosso amor é sobre nós, e é uma paz enorme poder dizer isso.</p>
+Gabriel, eu espero que eu consiga ajudar a alegrar seus dias tanto quanto você ajuda a alegrar os meus. Eu te admiro tanto enquanto ser namorado e amigo. Que sorte minha poder ter essas duas versões. Um companheiro pra vida!</p>
+Lembro no começo, quando estávamos entendendo como íamos nos encaixar na vida um do outro, como eu me preocupava, até mesmo com a forma que eu te chamava, pra mim, se eu não te chamasse de babu eu não estaria sendo íntimo kkkkkk, mas é engraçado pensar como o tempo dissolveu essas preocupações, Gabriel, babu, meu bem, B, mo, independente do nome, a certeza que eu tenho é do que eu sinto, e isso não muda :))</p>
+Obrigado de novo, por estar fazendo parte desse momento tão feliz da minha vida, você é especial demais pra mim, meu Gabrielzinho, meu babuzinho, meu gatinho!</p>
+Espero que possamos comemorar muitos mais meses e anos pela frente!</p>
+Mal posso esperar pra saber o que o futuro nos reserva <3</p>
                 `;
             } else {
                 document.getElementById('mensagem-amor').textContent = 'Senha inválida';
