--- a/ikndex.html
+++ b/ikndex.html
@@ -43,7 +43,7 @@
   <div class="teaser">20.05</div>
 
  <img 
-  src="https://upload.wikimedia.org/wikipedia/en/5/53/Snoopy_Peanuts.png" 
+  src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbr.pinterest.com%2Fpin%2F462181980516016458%2F&psig=AOvVaw2fy1UWOvoEeZ1xC-0UQV79&ust=1746737900931000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLiGx52gko0DFQAAAAAdAAAAABAE" 
   alt="Snoopy com chapéu de festa" 
   class="snoopy"
 />
